9-azure-vnet-setup-to-debug-dcom-connectivity-failures/compute.tf

# Windows VM for NVR
resource "azurerm_windows_virtual_machine" "nvr_vm" {
  name                  = "nvr-vm"
  resource_group_name   = azurerm_resource_group.rg.name
  location              = azurerm_resource_group.rg.location
  size                  = "Standard_D2s_v3"
  admin_username        = "adminuser"
  admin_password        = "P@ssw0rd1234!" # Replace with a secure password
  network_interface_ids = [azurerm_network_interface.nvr_nic.id]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2019-Datacenter"
    version   = "latest"
  }
}

# Windows VM for Application Server
resource "azurerm_windows_virtual_machine" "app_vm" {
  name                  = "app-vm"
  resource_group_name   = azurerm_resource_group.rg.name
  location              = azurerm_resource_group.rg.location
  size                  = "Standard_D2s_v3"
  admin_username        = "adminuser"
  admin_password        = "P@ssw0rd1234!" # Replace with a secure password
  network_interface_ids = [azurerm_network_interface.app_nic.id]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2019-Datacenter"
    version   = "latest"
  }
}

output "nvr_public_ip" {
  value = azurerm_public_ip.nvr_public_ip.ip_address
}

output "app_public_ip" {
  value = azurerm_public_ip.app_public_ip.ip_address
}
